// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`test all the endpoint GET / responds with 200 and match snapshot 1`] = `
"<!DOCTYPE html>
<html class="light">
	<head>
		<meta name="viewport" content="width=device-width, initial-scale=1.0"/>
		<meta content="text/html;charset=utf-8" http-equiv="Content-Type">
		<meta content="utf-8" http-equiv="encoding">
		<meta name="keywords" content="portfolio, remi, tag reference"> 
		<meta name="description" content=""> 
		<meta name="author" content="Whassa">
		<meta property="og:description" content="A simple dev portfolio." />
		<meta property="og:title" content="Remi's portfolio" />
 
		<title>Remi's portfolio</title>
		<link rel="stylesheet" href="css/index.css">
	</head>
	<body>
		<div id="container" class="container">
			<nav class="menu navbar pl-5 pr-5" role="navigation" aria-label="main navigation">
    <div class="navbar-brand">
        <a class="navbar-item" href="/home">
            Remi's portfolio 
        </a>
        <a role="button" class="navbar-burger burger" aria-label="menu" aria-expanded="false" data-target="navbarMenu">
            <span aria-hidden="true"></span>
            <span aria-hidden="true"></span>
            <span aria-hidden="true"></span>
        </a>
    </div>
    <div id="navbarMenu" class="navbar-menu">
        <div class="navbar-start">
            <a class="navbar-item" href="/home">
                Home
            </a>
            <a class="navbar-item" href="/works">
                Work experiences
            </a>
            <a class="navbar-item" href="/projectTarget">
                Project Target
            </a>
            <a class="navbar-item" href="/asciiMe">
                Ascii me
            </a>
            <a class="navbar-item" href="https://whattoeat-eta.vercel.app/" target="_blank">
                What to eat ?
            </a>
            <a class="navbar-item" href="https://dashboard.twitch.tv/extensions/259e9bszh9bpm34kvozmttyyqjdrq2-1" target="_blank">
                Keyhole
            </a>
        </div>
        <div class="navbar-end">
            <div id="theme-changer" class="navbar-item switch-container" >
                <span>
                    Change theme
                </span>
                
                <label class="switch">
                    <input id="theme-checkbox" type="checkbox" checked>
                    <span class="slider round"></span>
                </label>
            </div>
            <a class="navbar-item" href="https://github.com/whassa">
                <img id="github-logo" src="img/GitHub-Mark-Light-32px.png" />
                <span style="padding-left: 5px">My Github</span>
            </a>
        </div>
        </div>
</nav>
			<div class="content" style="height: 100%">
				<div class="columns is-mobile is-centered description-container">
					<div class="column is-four-fifths-mobile is-four-fifths-tablet is-half-desktop is-two-fifths-widescreen" >
						<div class="card">
                            <div class="card-content">
								<div class="content">
									<p class="is-size-5">
										Hey, my name is Rémi or you can call me Whassa. I'm a bachelor in Software Engineering from <a href="https://www.etsmtl.ca/">ETS</a>
										in Montreal. This is a small Website portfolio for you to discover some of my projects and works. 
										I'm a full stack developper who has uses mostly Javascript and has grown used to use frameworks such as ReactJs, VueJs, Svelte and NextJs.
										My work experience is mostly Front End, but I'm open to discover and try new thing.
										My experience with back end languages is pretty diversified with languages such as Ruby, PHP, Python and a bit of C#.
										I'm a curious person and I always like to know for more. 
										Also, there's a link to my github pages in the menu if you're interested to know more about what I'm doing!
									</p>
								</div>
							</div>
                        </div>
					</div>
				</div>
				<div class="columns is-mobile is-centered">
					<div class="column is-four-fifths-mobile is-four-fifths-tablet is-half-desktop animation-container">
						<div class="heartbeat-container">
    <div></div>
    <div></div>
</div>
					</div>
				</div>
			</div>
		</div>
		<script src="js/bundle.js" type="text/javascript"></script>
	</body>
</html>"
`;

exports[`test all the endpoint GET /anywhere in the world responds with 200 and match snapshot 1`] = `
"<!DOCTYPE html>
<html class="light">
	<head>
		<meta name="viewport" content="width=device-width, initial-scale=1.0"/>
		<meta content="text/html;charset=utf-8" http-equiv="Content-Type">
		<meta content="utf-8" http-equiv="encoding">
		<meta name="keywords" content="portfolio, remi, tag reference"> 
		<meta name="description" content=""> 
		<meta name="author" content="Whassa">
		<meta property="og:description" content="A simple dev portfolio." />
		<meta property="og:title" content="Remi's portfolio" />
 
		<title>Remi's portfolio</title>
		<link rel="stylesheet" href="css/index.css">
	</head>
	<body>
		<div id="container" class="container">
			<nav class="menu navbar pl-5 pr-5" role="navigation" aria-label="main navigation">
    <div class="navbar-brand">
        <a class="navbar-item" href="/home">
            Remi's portfolio 
        </a>
        <a role="button" class="navbar-burger burger" aria-label="menu" aria-expanded="false" data-target="navbarMenu">
            <span aria-hidden="true"></span>
            <span aria-hidden="true"></span>
            <span aria-hidden="true"></span>
        </a>
    </div>
    <div id="navbarMenu" class="navbar-menu">
        <div class="navbar-start">
            <a class="navbar-item" href="/home">
                Home
            </a>
            <a class="navbar-item" href="/works">
                Work experiences
            </a>
            <a class="navbar-item" href="/projectTarget">
                Project Target
            </a>
            <a class="navbar-item" href="/asciiMe">
                Ascii me
            </a>
            <a class="navbar-item" href="https://whattoeat-eta.vercel.app/" target="_blank">
                What to eat ?
            </a>
            <a class="navbar-item" href="https://dashboard.twitch.tv/extensions/259e9bszh9bpm34kvozmttyyqjdrq2-1" target="_blank">
                Keyhole
            </a>
        </div>
        <div class="navbar-end">
            <div id="theme-changer" class="navbar-item switch-container" >
                <span>
                    Change theme
                </span>
                
                <label class="switch">
                    <input id="theme-checkbox" type="checkbox" checked>
                    <span class="slider round"></span>
                </label>
            </div>
            <a class="navbar-item" href="https://github.com/whassa">
                <img id="github-logo" src="img/GitHub-Mark-Light-32px.png" />
                <span style="padding-left: 5px">My Github</span>
            </a>
        </div>
        </div>
</nav>
			<div class="content" style="height: 100%">
				<div class="columns is-mobile is-centered description-container">
					<div class="column is-four-fifths-mobile is-four-fifths-tablet is-half-desktop is-two-fifths-widescreen" >
						<div class="card">
                            <div class="card-content">
								<div class="content">
									<p class="is-size-5">
										Hey, my name is Rémi or you can call me Whassa. I'm a bachelor in Software Engineering from <a href="https://www.etsmtl.ca/">ETS</a>
										in Montreal. This is a small Website portfolio for you to discover some of my projects and works. 
										I'm a full stack developper who has uses mostly Javascript and has grown used to use frameworks such as ReactJs, VueJs, Svelte and NextJs.
										My work experience is mostly Front End, but I'm open to discover and try new thing.
										My experience with back end languages is pretty diversified with languages such as Ruby, PHP, Python and a bit of C#.
										I'm a curious person and I always like to know for more. 
										Also, there's a link to my github pages in the menu if you're interested to know more about what I'm doing!
									</p>
								</div>
							</div>
                        </div>
					</div>
				</div>
				<div class="columns is-mobile is-centered">
					<div class="column is-four-fifths-mobile is-four-fifths-tablet is-half-desktop animation-container">
						<div class="heartbeat-container">
    <div></div>
    <div></div>
</div>
					</div>
				</div>
			</div>
		</div>
		<script src="js/bundle.js" type="text/javascript"></script>
	</body>
</html>"
`;

exports[`test all the endpoint GET /asciiMe responds with 200 and match snapshot 1`] = `
"<!DOCTYPE html>
<html class="light">
	<head>
		<meta name="viewport" content="width=device-width, initial-scale=1.0"/>
		<meta content="text/html;charset=utf-8" http-equiv="Content-Type">
		<meta content="utf-8" http-equiv="encoding">
			<style>
				canvas {
				    border:1px solid #d3d3d3;
				    background-color: #f1f1f1;
				}
			</style>
		<title>Ascii me</title>
		<link rel="stylesheet" href="css/index.css">
	</head>
	<body>
		<div id="container" class="container is-max-desktop">
			<nav class="menu navbar pl-5 pr-5" role="navigation" aria-label="main navigation">
    <div class="navbar-brand">
        <a class="navbar-item" href="/home">
            Remi's portfolio 
        </a>
        <a role="button" class="navbar-burger burger" aria-label="menu" aria-expanded="false" data-target="navbarMenu">
            <span aria-hidden="true"></span>
            <span aria-hidden="true"></span>
            <span aria-hidden="true"></span>
        </a>
    </div>
    <div id="navbarMenu" class="navbar-menu">
        <div class="navbar-start">
            <a class="navbar-item" href="/home">
                Home
            </a>
            <a class="navbar-item" href="/works">
                Work experiences
            </a>
            <a class="navbar-item" href="/projectTarget">
                Project Target
            </a>
            <a class="navbar-item" href="/asciiMe">
                Ascii me
            </a>
            <a class="navbar-item" href="https://whattoeat-eta.vercel.app/" target="_blank">
                What to eat ?
            </a>
            <a class="navbar-item" href="https://dashboard.twitch.tv/extensions/259e9bszh9bpm34kvozmttyyqjdrq2-1" target="_blank">
                Keyhole
            </a>
        </div>
        <div class="navbar-end">
            <div id="theme-changer" class="navbar-item switch-container" >
                <span>
                    Change theme
                </span>
                
                <label class="switch">
                    <input id="theme-checkbox" type="checkbox" checked>
                    <span class="slider round"></span>
                </label>
            </div>
            <a class="navbar-item" href="https://github.com/whassa">
                <img id="github-logo" src="img/GitHub-Mark-Light-32px.png" />
                <span style="padding-left: 5px">My Github</span>
            </a>
        </div>
        </div>
</nav>
			<div id="ascii-hidden"> 
				<video id="video" width="100" height="60" autoplay />
				<canvas id="canva"  width="100" height="60" />
			</div> 
			<div id="content" class="is-mobile is-centered mt-2">
				<div class="row"">
					<h1 class="title is-1 is-centered" style="text-align: center;">
						Ascii yourself
					</h1>
				</div>
				<div class="row mb-5">
					<h2 class="subtitle" style="text-align: center;">
						Open your camera to see yourself in ascii code. It should works on a computer with a recent browser.
					</h2>
				</div>
				<div class="row">
					<div id="ascii-video" class="mx-auto"/>
				</div>
				<div class="row mt-2">
					<div class="subtitle" style="text-align: center;">
						Strongly based on the coding train video: <a href="https://youtu.be/55iwMYv8tGI">https://youtu.be/55iwMYv8tGI</a>
					</div>
				</div>
			</div>
		</div>
		<script src="js/bundle.js" type="text/javascript"></script>
		<script src="js/asciiMe.js"  type="text/javascript"></script>
	</body>
</html>"
`;

exports[`test all the endpoint GET /home responds with 200 and match snapshot 1`] = `
"<!DOCTYPE html>
<html class="light">
	<head>
		<meta name="viewport" content="width=device-width, initial-scale=1.0"/>
		<meta content="text/html;charset=utf-8" http-equiv="Content-Type">
		<meta content="utf-8" http-equiv="encoding">
		<meta name="keywords" content="portfolio, remi, tag reference"> 
		<meta name="description" content=""> 
		<meta name="author" content="Whassa">
		<meta property="og:description" content="A simple dev portfolio." />
		<meta property="og:title" content="Remi's portfolio" />
 
		<title>Remi's portfolio</title>
		<link rel="stylesheet" href="css/index.css">
	</head>
	<body>
		<div id="container" class="container">
			<nav class="menu navbar pl-5 pr-5" role="navigation" aria-label="main navigation">
    <div class="navbar-brand">
        <a class="navbar-item" href="/home">
            Remi's portfolio 
        </a>
        <a role="button" class="navbar-burger burger" aria-label="menu" aria-expanded="false" data-target="navbarMenu">
            <span aria-hidden="true"></span>
            <span aria-hidden="true"></span>
            <span aria-hidden="true"></span>
        </a>
    </div>
    <div id="navbarMenu" class="navbar-menu">
        <div class="navbar-start">
            <a class="navbar-item" href="/home">
                Home
            </a>
            <a class="navbar-item" href="/works">
                Work experiences
            </a>
            <a class="navbar-item" href="/projectTarget">
                Project Target
            </a>
            <a class="navbar-item" href="/asciiMe">
                Ascii me
            </a>
            <a class="navbar-item" href="https://whattoeat-eta.vercel.app/" target="_blank">
                What to eat ?
            </a>
            <a class="navbar-item" href="https://dashboard.twitch.tv/extensions/259e9bszh9bpm34kvozmttyyqjdrq2-1" target="_blank">
                Keyhole
            </a>
        </div>
        <div class="navbar-end">
            <div id="theme-changer" class="navbar-item switch-container" >
                <span>
                    Change theme
                </span>
                
                <label class="switch">
                    <input id="theme-checkbox" type="checkbox" checked>
                    <span class="slider round"></span>
                </label>
            </div>
            <a class="navbar-item" href="https://github.com/whassa">
                <img id="github-logo" src="img/GitHub-Mark-Light-32px.png" />
                <span style="padding-left: 5px">My Github</span>
            </a>
        </div>
        </div>
</nav>
			<div class="content" style="height: 100%">
				<div class="columns is-mobile is-centered description-container">
					<div class="column is-four-fifths-mobile is-four-fifths-tablet is-half-desktop is-two-fifths-widescreen" >
						<div class="card">
                            <div class="card-content">
								<div class="content">
									<p class="is-size-5">
										Hey, my name is Rémi or you can call me Whassa. I'm a bachelor in Software Engineering from <a href="https://www.etsmtl.ca/">ETS</a>
										in Montreal. This is a small Website portfolio for you to discover some of my projects and works. 
										I'm a full stack developper who has uses mostly Javascript and has grown used to use frameworks such as ReactJs, VueJs, Svelte and NextJs.
										My work experience is mostly Front End, but I'm open to discover and try new thing.
										My experience with back end languages is pretty diversified with languages such as Ruby, PHP, Python and a bit of C#.
										I'm a curious person and I always like to know for more. 
										Also, there's a link to my github pages in the menu if you're interested to know more about what I'm doing!
									</p>
								</div>
							</div>
                        </div>
					</div>
				</div>
				<div class="columns is-mobile is-centered">
					<div class="column is-four-fifths-mobile is-four-fifths-tablet is-half-desktop animation-container">
						<div class="heartbeat-container">
    <div></div>
    <div></div>
</div>
					</div>
				</div>
			</div>
		</div>
		<script src="js/bundle.js" type="text/javascript"></script>
	</body>
</html>"
`;

exports[`test all the endpoint GET /projectTarget responds with 200 and match snapshot 1`] = `
"<!DOCTYPE html>
<html class="light">
	<head>
		<meta name="viewport" content="width=device-width, initial-scale=1.0"/>
		<meta content="text/html;charset=utf-8" http-equiv="Content-Type">
		<meta content="utf-8" http-equiv="encoding">
			<style>
				canvas {
				    border:1px solid #d3d3d3;
				    background-color: #f1f1f1;
				}
			</style>
		<title>Project Target</title>
		<link rel="stylesheet" href="css/index.css">
	</head>
	<body>
		<div id="container" class="container is-max-desktop">
			<nav class="menu navbar pl-5 pr-5" role="navigation" aria-label="main navigation">
    <div class="navbar-brand">
        <a class="navbar-item" href="/home">
            Remi's portfolio 
        </a>
        <a role="button" class="navbar-burger burger" aria-label="menu" aria-expanded="false" data-target="navbarMenu">
            <span aria-hidden="true"></span>
            <span aria-hidden="true"></span>
            <span aria-hidden="true"></span>
        </a>
    </div>
    <div id="navbarMenu" class="navbar-menu">
        <div class="navbar-start">
            <a class="navbar-item" href="/home">
                Home
            </a>
            <a class="navbar-item" href="/works">
                Work experiences
            </a>
            <a class="navbar-item" href="/projectTarget">
                Project Target
            </a>
            <a class="navbar-item" href="/asciiMe">
                Ascii me
            </a>
            <a class="navbar-item" href="https://whattoeat-eta.vercel.app/" target="_blank">
                What to eat ?
            </a>
            <a class="navbar-item" href="https://dashboard.twitch.tv/extensions/259e9bszh9bpm34kvozmttyyqjdrq2-1" target="_blank">
                Keyhole
            </a>
        </div>
        <div class="navbar-end">
            <div id="theme-changer" class="navbar-item switch-container" >
                <span>
                    Change theme
                </span>
                
                <label class="switch">
                    <input id="theme-checkbox" type="checkbox" checked>
                    <span class="slider round"></span>
                </label>
            </div>
            <a class="navbar-item" href="https://github.com/whassa">
                <img id="github-logo" src="img/GitHub-Mark-Light-32px.png" />
                <span style="padding-left: 5px">My Github</span>
            </a>
        </div>
        </div>
</nav>
			<div id="content" class="columns is-mobile is-centered mt-2"> </div> 
		</div>
		<script src="js/bundle.js" type="text/javascript"></script>
		<script src="js/rando.js"></script>
		<script src="js/canvaInput.js"></script>
		<script src="js/game.js" type="text/javascript" onload="startGame()"></script>
	</body>
</html>"
`;

exports[`test all the endpoint GET /works responds with 200 and match snapshot 1`] = `
"<!DOCTYPE html>
<html class="light">
  <head>
    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
    <meta content="text/html;charset=utf-8" http-equiv="Content-Type" />
    <meta content="utf-8" http-equiv="encoding" />
    <meta
      name="keywords"
      content="portfolio, remi, twork, experiences, reference"
    />
    <meta name="description" content="This is my work experiences page!" />
    <meta name="author" content="Whassa" />
    <meta
      property="og:description"
      content="A simple dev portfolio and his work experiences page"
    />
    <meta property="og:title" content="Remi's portfolio" />

    <title>Remi's portfolio</title>
    <link rel="stylesheet" href="css/index.css" />
  </head>
  <body>
    <div id="container" class="container">
      <nav class="menu navbar pl-5 pr-5" role="navigation" aria-label="main navigation">
    <div class="navbar-brand">
        <a class="navbar-item" href="/home">
            Remi's portfolio 
        </a>
        <a role="button" class="navbar-burger burger" aria-label="menu" aria-expanded="false" data-target="navbarMenu">
            <span aria-hidden="true"></span>
            <span aria-hidden="true"></span>
            <span aria-hidden="true"></span>
        </a>
    </div>
    <div id="navbarMenu" class="navbar-menu">
        <div class="navbar-start">
            <a class="navbar-item" href="/home">
                Home
            </a>
            <a class="navbar-item" href="/works">
                Work experiences
            </a>
            <a class="navbar-item" href="/projectTarget">
                Project Target
            </a>
            <a class="navbar-item" href="/asciiMe">
                Ascii me
            </a>
            <a class="navbar-item" href="https://whattoeat-eta.vercel.app/" target="_blank">
                What to eat ?
            </a>
            <a class="navbar-item" href="https://dashboard.twitch.tv/extensions/259e9bszh9bpm34kvozmttyyqjdrq2-1" target="_blank">
                Keyhole
            </a>
        </div>
        <div class="navbar-end">
            <div id="theme-changer" class="navbar-item switch-container" >
                <span>
                    Change theme
                </span>
                
                <label class="switch">
                    <input id="theme-checkbox" type="checkbox" checked>
                    <span class="slider round"></span>
                </label>
            </div>
            <a class="navbar-item" href="https://github.com/whassa">
                <img id="github-logo" src="img/GitHub-Mark-Light-32px.png" />
                <span style="padding-left: 5px">My Github</span>
            </a>
        </div>
        </div>
</nav>
      <div class="content" style="height: 100%">
        <div class="row mt-5">
					<h3 class="title" style="text-align: center;">
            You can slide the cards to show some appreciations of my work experiences.
					</h3>
				</div>
        <div class="columns is-mobile is-centered">
          <div
            class="column is-four-fifths-mobile is-four-fifths-tablet is-half-desktop is-two-fifths-widescreen mt-5"
          >
            <div id="LikeMindedLab" class="card card-draggable" data-aos="zoom-in-right">
              <div class="card-content">
                <div class="media">
                  <div class="media-content">
                    <p class="title is-4 non-draggable-text">
                      Web developper at
                      <a
                        href="https://www.lmmv.com/index.html"
                        rel="noopener noreferrer"
                        >Like Minded Lab</a
                      >
                    </p>
                  </div>
                  <div class="thumbs">
                    
                     <svg width="1.5rem" height="1.5rem" viewBox="0 0 24 24" fill="none" xmlns="http://www.w3.org/2000/svg">
    <path d="M7.24001 11V20H5.63001C4.73001 20 4.01001 19.28 4.01001 18.39V12.62C4.01001 11.73 4.74001 11 5.63001 11H7.24001ZM18.5 9.5H13.72V6C13.72 4.9 12.82 4 11.73 4H11.64C11.24 4 10.88 4.24 10.72 4.61L7.99001 11V20H17.19C17.92 20 18.54 19.48 18.67 18.76L19.99 11.26C20.15 10.34 19.45 9.5 18.51 9.5H18.5Z" fill="#28a745"/>
</svg>  
                  </div>
                </div>

                <div class="content">
                  <ul class="non-draggable-list">
                    <li>Complete multiple Javascript tasks</li>
                    <li>
                      Build and develop multiple cross platform project with
                      React Native and ElectronJs
                    </li>
                    <li>Integgrate Continuous Integration to project</li>
                    <li>Attend the code review within the company</li>
                    <li>Fix bugs.</li>
                    <li>Optimize the code.</li>
                  </ul>
                </div>
              </div>
              <div class="drag-me"></div>
            </div>
          </div>
        </div>
        <div class="columns is-mobile is-centered">
          <div
            class="column is-four-fifths-mobile is-four-fifths-tablet is-half-desktop is-two-fifths-widescreen mt-5"
          >
            <div id="Stingray" class="card card-draggable" data-aos="zoom-in-left">
              <div class="card-content">
                <div class="media">
                  <div class="media-content">
                    <p class="title is-4 non-draggable-text">
                      Intern Web developper at
                      <a
                        href="https://www.stingray.com/"
                        rel="noopener noreferrer"
                        >Stingray</a
                      >
                    </p>
                  </div>
                  <div class="thumbs">
                      <svg width="1.5rem" height="1.5rem" viewBox="0 0 24 24" fill="none" xmlns="http://www.w3.org/2000/svg">
<path d="M20 5.61V11.38C20 12.27 19.27 13 18.38 13H16.77V4H18.38C19.28 4 20 4.72 20 5.61ZM5.34001 5.24L4.02001 12.74C3.86001 13.66 4.56001 14.5 5.50001 14.5H10.28V18C10.28 19.1 11.18 20 12.27 20H12.36C12.76 20 13.12 19.76 13.28 19.39L16.01 13V4H6.81001C6.08001 4 5.46001 4.52 5.33001 5.24H5.34001Z" fill="#FC100D"/>
</svg>  
                  </div>
                </div>

                <div class="content">
                  <ul class="non-draggable-list">
                    <li>Carry out and complete NextJs projects</li>
                    <li>Attend the code review within the company</li>
                    <li>Fix bugs.</li>
                    <li>Optimize the code.</li>
                  </ul>
                </div>
              </div>
              <div class="drag-me"></div>
            </div>
          </div>
        </div>
        <div class="columns is-mobile is-centered">
          <div
            class="column is-four-fifths-mobile is-four-fifths-tablet is-half-desktop is-two-fifths-widescreen mt-5"
          >
            <div id="Dakis" class="card card-draggable" data-aos="zoom-in-right">
              <div class="card-content">
                <div class="media">
                  <div class="media-content">
                    <p class="title is-4 non-draggable-text">
                      Intern Web developper and Web developper at
                      <a href="https://dakis.com/" rel="noopener noreferrer"
                        >Dakis</a
                      >
                    </p>
                  </div>
                  <div class="thumbs">
                    
                  </div>
                </div>

                <div class="content">
                  <ul class="non-draggable-list">
                    <li>Carry out and complete React projects</li>
                    <li>Attend the code review within the company</li>
                    <li>
                      Optimize company code and implement good programming
                      practices.
                    </li>
                    <li>Work in an Agile work environment</li>
                  </ul>
                </div>
              </div>
              <div class="drag-me"></div>
            </div>
          </div>
        </div>
        <div class="columns is-mobile is-centered">
          <div
            class="column is-four-fifths-mobile is-four-fifths-tablet is-half-desktop is-two-fifths-widescreen mt-5"
          >
            <div id="OrangeTango" class="card card-draggable" data-aos="zoom-in-left">
              <div class="card-content">
                <div class="media">
                  <div class="media-content">
                    <p class="title is-4 non-draggable-text">
                      Intern Web developper at
                      <a
                        href="http://orangetango.com/"
                        rel="noopener noreferrer"
                        >OrangeTango</a
                      >
                    </p>
                  </div>
                  <div class="thumbs">
                    
                  </div>
                </div>
                <div class="content">
                  <ul class="non-draggable-list">
                    <li>Create content management platforms.</li>
                    <li>Carry out website projects in specific times.</li>
                    <li>Fix bugs.</li>
                    <li>
                      Optimize company code and implement good programming
                      practices.
                    </li>
                  </ul>
                </div>
              </div>
              <div class="drag-me"></div>
            </div>
          </div>
        </div>
        <div class="columns is-mobile is-centered">
          <div
            class="column is-four-fifths-mobile is-four-fifths-tablet is-half-desktop is-two-fifths-widescreen mt-5"
          >
            <div id="OneProvider" class="card card-draggable" data-aos="zoom-in-right">
              <div class="card-content">
                <div class="media">
                  <div class="media-content">
                    <p class="title is-4 non-draggable-text">
                      Intern Web developper and Web developper at
                      <a
                        href="https://oneprovider.com/"
                        rel="noopener noreferrer"
                        >OneProvider</a
                      >
                    </p>
                  </div>
                  <div class="thumbs">
                    
                  </div>
                </div>
                <div class="content">
                  <ul class="non-draggable-list">
                    <li>Carry out web development projects.</li>
                    <li>Fix bugs.</li>
                    <li>Optimize the code.</li>
                  </ul>
                </div>
              </div>
              <div class="drag-me"></div>
            </div>
          </div>
        </div>
      </div>
    </div>
    <script src="js/bundle.js" type="text/javascript"></script>
    <script src="js/works.js" type="text/javascript"></script>
  </body>
</html>
"
`;

exports[`test all the endpoint GET /works responds with 200 and match snapshot 2`] = `
"<!DOCTYPE html>
<html class="light">
  <head>
    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
    <meta content="text/html;charset=utf-8" http-equiv="Content-Type" />
    <meta content="utf-8" http-equiv="encoding" />
    <meta
      name="keywords"
      content="portfolio, remi, twork, experiences, reference"
    />
    <meta name="description" content="This is my work experiences page!" />
    <meta name="author" content="Whassa" />
    <meta
      property="og:description"
      content="A simple dev portfolio and his work experiences page"
    />
    <meta property="og:title" content="Remi's portfolio" />

    <title>Remi's portfolio</title>
    <link rel="stylesheet" href="css/index.css" />
  </head>
  <body>
    <div id="container" class="container">
      <nav class="menu navbar pl-5 pr-5" role="navigation" aria-label="main navigation">
    <div class="navbar-brand">
        <a class="navbar-item" href="/home">
            Remi's portfolio 
        </a>
        <a role="button" class="navbar-burger burger" aria-label="menu" aria-expanded="false" data-target="navbarMenu">
            <span aria-hidden="true"></span>
            <span aria-hidden="true"></span>
            <span aria-hidden="true"></span>
        </a>
    </div>
    <div id="navbarMenu" class="navbar-menu">
        <div class="navbar-start">
            <a class="navbar-item" href="/home">
                Home
            </a>
            <a class="navbar-item" href="/works">
                Work experiences
            </a>
            <a class="navbar-item" href="/projectTarget">
                Project Target
            </a>
            <a class="navbar-item" href="/asciiMe">
                Ascii me
            </a>
            <a class="navbar-item" href="https://whattoeat-eta.vercel.app/" target="_blank">
                What to eat ?
            </a>
            <a class="navbar-item" href="https://dashboard.twitch.tv/extensions/259e9bszh9bpm34kvozmttyyqjdrq2-1" target="_blank">
                Keyhole
            </a>
        </div>
        <div class="navbar-end">
            <div id="theme-changer" class="navbar-item switch-container" >
                <span>
                    Change theme
                </span>
                
                <label class="switch">
                    <input id="theme-checkbox" type="checkbox" checked>
                    <span class="slider round"></span>
                </label>
            </div>
            <a class="navbar-item" href="https://github.com/whassa">
                <img id="github-logo" src="img/GitHub-Mark-Light-32px.png" />
                <span style="padding-left: 5px">My Github</span>
            </a>
        </div>
        </div>
</nav>
      <div class="content" style="height: 100%">
        <div class="row mt-5">
					<h3 class="title" style="text-align: center;">
            You can slide the cards to show some appreciations of my work experiences.
					</h3>
				</div>
        <div class="columns is-mobile is-centered">
          <div
            class="column is-four-fifths-mobile is-four-fifths-tablet is-half-desktop is-two-fifths-widescreen mt-5"
          >
            <div id="LikeMindedLab" class="card card-draggable" data-aos="zoom-in-right">
              <div class="card-content">
                <div class="media">
                  <div class="media-content">
                    <p class="title is-4 non-draggable-text">
                      Web developper at
                      <a
                        href="https://www.lmmv.com/index.html"
                        rel="noopener noreferrer"
                        >Like Minded Lab</a
                      >
                    </p>
                  </div>
                  <div class="thumbs">
                    
                  </div>
                </div>

                <div class="content">
                  <ul class="non-draggable-list">
                    <li>Complete multiple Javascript tasks</li>
                    <li>
                      Build and develop multiple cross platform project with
                      React Native and ElectronJs
                    </li>
                    <li>Integgrate Continuous Integration to project</li>
                    <li>Attend the code review within the company</li>
                    <li>Fix bugs.</li>
                    <li>Optimize the code.</li>
                  </ul>
                </div>
              </div>
              <div class="drag-me"></div>
            </div>
          </div>
        </div>
        <div class="columns is-mobile is-centered">
          <div
            class="column is-four-fifths-mobile is-four-fifths-tablet is-half-desktop is-two-fifths-widescreen mt-5"
          >
            <div id="Stingray" class="card card-draggable" data-aos="zoom-in-left">
              <div class="card-content">
                <div class="media">
                  <div class="media-content">
                    <p class="title is-4 non-draggable-text">
                      Intern Web developper at
                      <a
                        href="https://www.stingray.com/"
                        rel="noopener noreferrer"
                        >Stingray</a
                      >
                    </p>
                  </div>
                  <div class="thumbs">
                    
                  </div>
                </div>

                <div class="content">
                  <ul class="non-draggable-list">
                    <li>Carry out and complete NextJs projects</li>
                    <li>Attend the code review within the company</li>
                    <li>Fix bugs.</li>
                    <li>Optimize the code.</li>
                  </ul>
                </div>
              </div>
              <div class="drag-me"></div>
            </div>
          </div>
        </div>
        <div class="columns is-mobile is-centered">
          <div
            class="column is-four-fifths-mobile is-four-fifths-tablet is-half-desktop is-two-fifths-widescreen mt-5"
          >
            <div id="Dakis" class="card card-draggable" data-aos="zoom-in-right">
              <div class="card-content">
                <div class="media">
                  <div class="media-content">
                    <p class="title is-4 non-draggable-text">
                      Intern Web developper and Web developper at
                      <a href="https://dakis.com/" rel="noopener noreferrer"
                        >Dakis</a
                      >
                    </p>
                  </div>
                  <div class="thumbs">
                    
                  </div>
                </div>

                <div class="content">
                  <ul class="non-draggable-list">
                    <li>Carry out and complete React projects</li>
                    <li>Attend the code review within the company</li>
                    <li>
                      Optimize company code and implement good programming
                      practices.
                    </li>
                    <li>Work in an Agile work environment</li>
                  </ul>
                </div>
              </div>
              <div class="drag-me"></div>
            </div>
          </div>
        </div>
        <div class="columns is-mobile is-centered">
          <div
            class="column is-four-fifths-mobile is-four-fifths-tablet is-half-desktop is-two-fifths-widescreen mt-5"
          >
            <div id="OrangeTango" class="card card-draggable" data-aos="zoom-in-left">
              <div class="card-content">
                <div class="media">
                  <div class="media-content">
                    <p class="title is-4 non-draggable-text">
                      Intern Web developper at
                      <a
                        href="http://orangetango.com/"
                        rel="noopener noreferrer"
                        >OrangeTango</a
                      >
                    </p>
                  </div>
                  <div class="thumbs">
                    
                  </div>
                </div>
                <div class="content">
                  <ul class="non-draggable-list">
                    <li>Create content management platforms.</li>
                    <li>Carry out website projects in specific times.</li>
                    <li>Fix bugs.</li>
                    <li>
                      Optimize company code and implement good programming
                      practices.
                    </li>
                  </ul>
                </div>
              </div>
              <div class="drag-me"></div>
            </div>
          </div>
        </div>
        <div class="columns is-mobile is-centered">
          <div
            class="column is-four-fifths-mobile is-four-fifths-tablet is-half-desktop is-two-fifths-widescreen mt-5"
          >
            <div id="OneProvider" class="card card-draggable" data-aos="zoom-in-right">
              <div class="card-content">
                <div class="media">
                  <div class="media-content">
                    <p class="title is-4 non-draggable-text">
                      Intern Web developper and Web developper at
                      <a
                        href="https://oneprovider.com/"
                        rel="noopener noreferrer"
                        >OneProvider</a
                      >
                    </p>
                  </div>
                  <div class="thumbs">
                    
                  </div>
                </div>
                <div class="content">
                  <ul class="non-draggable-list">
                    <li>Carry out web development projects.</li>
                    <li>Fix bugs.</li>
                    <li>Optimize the code.</li>
                  </ul>
                </div>
              </div>
              <div class="drag-me"></div>
            </div>
          </div>
        </div>
      </div>
    </div>
    <script src="js/bundle.js" type="text/javascript"></script>
    <script src="js/works.js" type="text/javascript"></script>
  </body>
</html>
"
`;

exports[`test all the endpoint GET /works responds with 200 and there's actually no previous vote snapshot 1`] = `
"<!DOCTYPE html>
<html class="light">
  <head>
    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
    <meta content="text/html;charset=utf-8" http-equiv="Content-Type" />
    <meta content="utf-8" http-equiv="encoding" />
    <meta
      name="keywords"
      content="portfolio, remi, twork, experiences, reference"
    />
    <meta name="description" content="This is my work experiences page!" />
    <meta name="author" content="Whassa" />
    <meta
      property="og:description"
      content="A simple dev portfolio and his work experiences page"
    />
    <meta property="og:title" content="Remi's portfolio" />

    <title>Remi's portfolio</title>
    <link rel="stylesheet" href="css/index.css" />
  </head>
  <body>
    <div id="container" class="container">
      <nav class="menu navbar pl-5 pr-5" role="navigation" aria-label="main navigation">
    <div class="navbar-brand">
        <a class="navbar-item" href="/home">
            Remi's portfolio 
        </a>
        <a role="button" class="navbar-burger burger" aria-label="menu" aria-expanded="false" data-target="navbarMenu">
            <span aria-hidden="true"></span>
            <span aria-hidden="true"></span>
            <span aria-hidden="true"></span>
        </a>
    </div>
    <div id="navbarMenu" class="navbar-menu">
        <div class="navbar-start">
            <a class="navbar-item" href="/home">
                Home
            </a>
            <a class="navbar-item" href="/works">
                Work experiences
            </a>
            <a class="navbar-item" href="/projectTarget">
                Project Target
            </a>
            <a class="navbar-item" href="/asciiMe">
                Ascii me
            </a>
            <a class="navbar-item" href="https://whattoeat-eta.vercel.app/" target="_blank">
                What to eat ?
            </a>
            <a class="navbar-item" href="https://dashboard.twitch.tv/extensions/259e9bszh9bpm34kvozmttyyqjdrq2-1" target="_blank">
                Keyhole
            </a>
        </div>
        <div class="navbar-end">
            <div id="theme-changer" class="navbar-item switch-container" >
                <span>
                    Change theme
                </span>
                
                <label class="switch">
                    <input id="theme-checkbox" type="checkbox" checked>
                    <span class="slider round"></span>
                </label>
            </div>
            <a class="navbar-item" href="https://github.com/whassa">
                <img id="github-logo" src="img/GitHub-Mark-Light-32px.png" />
                <span style="padding-left: 5px">My Github</span>
            </a>
        </div>
        </div>
</nav>
      <div class="content" style="height: 100%">
        <div class="row mt-5">
					<h3 class="title" style="text-align: center;">
            You can slide the cards to show some appreciations of my work experiences.
					</h3>
				</div>
        <div class="columns is-mobile is-centered">
          <div
            class="column is-four-fifths-mobile is-four-fifths-tablet is-half-desktop is-two-fifths-widescreen mt-5"
          >
            <div id="LikeMindedLab" class="card card-draggable" data-aos="zoom-in-right">
              <div class="card-content">
                <div class="media">
                  <div class="media-content">
                    <p class="title is-4 non-draggable-text">
                      Web developper at
                      <a
                        href="https://www.lmmv.com/index.html"
                        rel="noopener noreferrer"
                        >Like Minded Lab</a
                      >
                    </p>
                  </div>
                  <div class="thumbs">
                    
                  </div>
                </div>

                <div class="content">
                  <ul class="non-draggable-list">
                    <li>Complete multiple Javascript tasks</li>
                    <li>
                      Build and develop multiple cross platform project with
                      React Native and ElectronJs
                    </li>
                    <li>Integgrate Continuous Integration to project</li>
                    <li>Attend the code review within the company</li>
                    <li>Fix bugs.</li>
                    <li>Optimize the code.</li>
                  </ul>
                </div>
              </div>
              <div class="drag-me"></div>
            </div>
          </div>
        </div>
        <div class="columns is-mobile is-centered">
          <div
            class="column is-four-fifths-mobile is-four-fifths-tablet is-half-desktop is-two-fifths-widescreen mt-5"
          >
            <div id="Stingray" class="card card-draggable" data-aos="zoom-in-left">
              <div class="card-content">
                <div class="media">
                  <div class="media-content">
                    <p class="title is-4 non-draggable-text">
                      Intern Web developper at
                      <a
                        href="https://www.stingray.com/"
                        rel="noopener noreferrer"
                        >Stingray</a
                      >
                    </p>
                  </div>
                  <div class="thumbs">
                    
                  </div>
                </div>

                <div class="content">
                  <ul class="non-draggable-list">
                    <li>Carry out and complete NextJs projects</li>
                    <li>Attend the code review within the company</li>
                    <li>Fix bugs.</li>
                    <li>Optimize the code.</li>
                  </ul>
                </div>
              </div>
              <div class="drag-me"></div>
            </div>
          </div>
        </div>
        <div class="columns is-mobile is-centered">
          <div
            class="column is-four-fifths-mobile is-four-fifths-tablet is-half-desktop is-two-fifths-widescreen mt-5"
          >
            <div id="Dakis" class="card card-draggable" data-aos="zoom-in-right">
              <div class="card-content">
                <div class="media">
                  <div class="media-content">
                    <p class="title is-4 non-draggable-text">
                      Intern Web developper and Web developper at
                      <a href="https://dakis.com/" rel="noopener noreferrer"
                        >Dakis</a
                      >
                    </p>
                  </div>
                  <div class="thumbs">
                    
                  </div>
                </div>

                <div class="content">
                  <ul class="non-draggable-list">
                    <li>Carry out and complete React projects</li>
                    <li>Attend the code review within the company</li>
                    <li>
                      Optimize company code and implement good programming
                      practices.
                    </li>
                    <li>Work in an Agile work environment</li>
                  </ul>
                </div>
              </div>
              <div class="drag-me"></div>
            </div>
          </div>
        </div>
        <div class="columns is-mobile is-centered">
          <div
            class="column is-four-fifths-mobile is-four-fifths-tablet is-half-desktop is-two-fifths-widescreen mt-5"
          >
            <div id="OrangeTango" class="card card-draggable" data-aos="zoom-in-left">
              <div class="card-content">
                <div class="media">
                  <div class="media-content">
                    <p class="title is-4 non-draggable-text">
                      Intern Web developper at
                      <a
                        href="http://orangetango.com/"
                        rel="noopener noreferrer"
                        >OrangeTango</a
                      >
                    </p>
                  </div>
                  <div class="thumbs">
                    
                  </div>
                </div>
                <div class="content">
                  <ul class="non-draggable-list">
                    <li>Create content management platforms.</li>
                    <li>Carry out website projects in specific times.</li>
                    <li>Fix bugs.</li>
                    <li>
                      Optimize company code and implement good programming
                      practices.
                    </li>
                  </ul>
                </div>
              </div>
              <div class="drag-me"></div>
            </div>
          </div>
        </div>
        <div class="columns is-mobile is-centered">
          <div
            class="column is-four-fifths-mobile is-four-fifths-tablet is-half-desktop is-two-fifths-widescreen mt-5"
          >
            <div id="OneProvider" class="card card-draggable" data-aos="zoom-in-right">
              <div class="card-content">
                <div class="media">
                  <div class="media-content">
                    <p class="title is-4 non-draggable-text">
                      Intern Web developper and Web developper at
                      <a
                        href="https://oneprovider.com/"
                        rel="noopener noreferrer"
                        >OneProvider</a
                      >
                    </p>
                  </div>
                  <div class="thumbs">
                    
                  </div>
                </div>
                <div class="content">
                  <ul class="non-draggable-list">
                    <li>Carry out web development projects.</li>
                    <li>Fix bugs.</li>
                    <li>Optimize the code.</li>
                  </ul>
                </div>
              </div>
              <div class="drag-me"></div>
            </div>
          </div>
        </div>
      </div>
    </div>
    <script src="js/bundle.js" type="text/javascript"></script>
    <script src="js/works.js" type="text/javascript"></script>
  </body>
</html>
"
`;
